// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_help returns a list of all commands 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Here is a list of available commands:
help, ping
Get more details with \\"?help [command]\\"",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the help command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "**help**: Get help with commands
*aliases*: commands, usage
*usage*: \`?help [command]\`",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the ping command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "**ping**: Pong",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
